--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -27,6 +27,7 @@ jobs:
           ORCA_JOB: ${{ matrix.orca-job }}
         run: |
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
+          curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/151.patch | git -C ../orca apply
           ../orca/bin/travis/before_install.sh
       - name: Install
         env:
