--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -28,8 +28,20 @@ jobs:
         run: |
           composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
           curl https://patch-diff.githubusercontent.com/raw/acquia/orca/pull/151.patch | git -C ../orca apply
-          ../orca/bin/travis/before_install.sh
+          ../orca/bin/actions/before_install.sh
       - name: Install
         env:
           ORCA_JOB: ${{ matrix.orca-job }}
-        run: ../orca/bin/travis/install.sh
+        run: ../orca/bin/actions/install.sh
+      - name: Before script
+        env:
+          ORCA_JOB: ${{ matrix.orca-job }}
+        run: ../orca/bin/actions/before_script.sh
+      - name: Script
+        env:
+          ORCA_JOB: ${{ matrix.orca-job }}
+        run: ../orca/bin/actions/script.sh
+      - name: After script
+        env:
+          ORCA_JOB: ${{ matrix.orca-job }}
+        run: ../orca/bin/actions/after_script.sh
