--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           ORCA_JOB: ${{ matrix.orca-job }}
         run: |
-          git clone git@github.com:danepowell/orca.git ../orca
+          git clone https://github.com/danepowell/orca.git ../orca
           git -C ../orca checkout ORCA-189
           composer -d ../orca install --no-dev --ignore-platform-req=php
           # composer create-project --no-dev --ignore-platform-req=php acquia/orca ../orca "$ORCA_VERSION"
