--- a/.github/workflows/orca.yml
+++ b/.github/workflows/orca.yml
@@ -39,12 +39,14 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12.x
-
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.3'
+          coverage: xdebug2
       - name: Before install
         env:
           ORCA_JOB: ${{ matrix.orca-job }}
         run: |
-          sudo update-alternatives --set php /usr/bin/php7.4
           git clone https://github.com/danepowell/orca.git ../orca
           git -C ../orca checkout ORCA-189
           composer install -d ../orca --no-dev --ignore-platform-req=php
